# ImButAudio

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
Files/: OnOff.psd  ЛОГО-1.ai  ЛОГО2-1.psd
Files/peaks/: cl.mp3.reapeaks
